--- a/imgui.ini
+++ b/imgui.ini
@@ -9,16 +9,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Control Panel]
-Pos=933,26
-Size=987,541
+Pos=0,605
+Size=1713,404
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][Table]
 Pos=0,26
-Size=931,541
+Size=966,577
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000001,0
 
 [Window][OpenGL Texture]
 Pos=0,520
@@ -27,16 +27,16 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Syntax tree]
-Pos=934,569
-Size=986,440
+Pos=968,26
+Size=952,577
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Debugging]
-Pos=0,569
-Size=932,440
+Pos=1715,605
+Size=205,404
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000007,0
 
 [Table][0x1CCD8CAE,3]
 Column 0  Weight=1.4257
@@ -49,12 +49,12 @@ Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=1920,983 Split=Y
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1920,541 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1920,492 Split=X
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=931,492 CentralNode=1 Selected=0x4FB91665
-      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=987,492 Selected=0xA008732B
-    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1920,489 Selected=0x25589AA2
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1920,440 Split=X Selected=0x97059648
-    DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=932,497 Selected=0x97059648
-    DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=986,497 Selected=0xDBE64303
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1920,577 Split=X
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=966,983 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=1920,492 CentralNode=1 Selected=0x4FB91665
+      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=1920,489 Selected=0x25589AA2
+    DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=952,983 Selected=0xDBE64303
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1920,404 Split=X Selected=0xA008732B
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1713,404 Selected=0xA008732B
+    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=205,404 Selected=0x97059648
 
